2048-app/kustomize/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
spec:
  selector:
    app: 2048-app
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 3000
  type: ClusterIp
